# ipython-style-gruvbox

./: CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README.rst  gruvbox.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.rst
tests/: test_gruvbox.py
